--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #UI
   cupertino_icons: ^1.0.2
+  flutter_iconly: ^1.0.2
+  google_fonts: ^4.0.3
+  fancy_shimmer_image: ^2.0.2
+  shimmer: ^2.0.0
+  card_swiper: ^2.0.4
+  page_transition: ^2.0.9
+  flutter_staggered_grid_view: ^0.6.2
+  webview_flutter: ^3.0.4
+
+  #social
+  share_plus: ^6.3.1
+  url_launcher: ^6.1.10
+
+  #Management
   shared_preferences: ^2.0.20 # is a plugin in Flutter that allows you to store data in the form of key-value pairs on the device. The data is stored persistently, meaning that it will still be available even if the app is closed or the device is restarted.
   provider: ^6.0.5 #state management library that allows you to easily manage the state of your application.(stores and provides you with state or data)
 
@@ -58,9 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
